syntax = "proto3";
package Fuse8.BackendInternship.gRPC;
import "google/protobuf/empty.proto";
import "DecimalValue.proto";

option csharp_namespace = "Fuse8.BackendInternship.gRPC";
// Сервис для работы с курсами валют.
service GrpcCurrency {
  // Получает текущий курс валюты по коду.
  rpc GetCurrencyCurrent (LatestCurrencyRequest) returns (CurrencyRate);
  
  // Получает курс валюты на указанную дату.
  rpc GetCurrencyOnDate (HistoricalCurrencyRequest) returns (CurrencyRate);
  
  // Получает настройки API, включая базовую валюту и доступность запросов.
  rpc GetSetting (google.protobuf.Empty) returns (Settings);
}

// Запрос для получения текущего курса валюты.
message LatestCurrencyRequest {
  // Код целевой влаюты, для которой находим курс
  CurrencyCode currency_code = 1;
  // Код базовой валюты, относительно которой находим курс
  CurrencyCode base_currency = 2;
}

// Запрос для получения курса валюты на указанную дату.
message HistoricalCurrencyRequest {
  // Код валюты (например, "USD", "EUR").
  CurrencyCode currency_code = 1;
  // Дата запроса курса в формате yyyy-MM-dd.
  GRPCDateOnly date = 2;
  // Код базовой валюты, относительно которой находим курс
  CurrencyCode base_currency = 3;
}

// Ответ, содержащий курс валюты.
message CurrencyRate {
  // Код валюты (например, "USD", "EUR").
  CurrencyCode currency_code = 1;
  
  // Значение обменного курса.
  DecimalValue value = 2;
}

// Настройки API.
message Settings {  
  // Флаг, указывающий, доступны ли еще запросы к API.
  bool requests_available = 2;
}

message GRPCDateOnly {
	// Год
	int32 year = 1;

	// Месяц
	int32 month = 2;

	// День
	int32 day = 3;
}

// Коды валют
enum CurrencyCode {
  CURRENCY_CODE_NOT_SET = 0;  // Значение по умолчанию
  CURRENCY_CODE_AED = 1;
  CURRENCY_CODE_AFN = 2;
  CURRENCY_CODE_ALL = 3;
  CURRENCY_CODE_AMD = 4;
  CURRENCY_CODE_ANG = 5;
  CURRENCY_CODE_AOA = 6;
  CURRENCY_CODE_ARS = 7;
  CURRENCY_CODE_AUD = 8;
  CURRENCY_CODE_AWG = 9;
  CURRENCY_CODE_AZN = 10;
  CURRENCY_CODE_BAM = 11;
  CURRENCY_CODE_BBD = 12;
  CURRENCY_CODE_BDT = 13;
  CURRENCY_CODE_BGN = 14;
  CURRENCY_CODE_BHD = 15;
  CURRENCY_CODE_BIF = 16;
  CURRENCY_CODE_BMD = 17;
  CURRENCY_CODE_BND = 18;
  CURRENCY_CODE_BOB = 19;
  CURRENCY_CODE_BRL = 20;
  CURRENCY_CODE_BSD = 21;
  CURRENCY_CODE_BTN = 22;
  CURRENCY_CODE_BWP = 23;
  CURRENCY_CODE_BYN = 24;
  CURRENCY_CODE_BYR = 25;
  CURRENCY_CODE_BZD = 26;
  CURRENCY_CODE_CAD = 27;
  CURRENCY_CODE_CDF = 28;
  CURRENCY_CODE_CHF = 29;
  CURRENCY_CODE_CLF = 30;
  CURRENCY_CODE_CLP = 31;
  CURRENCY_CODE_CNY = 32;
  CURRENCY_CODE_COP = 33;
  CURRENCY_CODE_CRC = 34;
  CURRENCY_CODE_CUC = 35;
  CURRENCY_CODE_CUP = 36;
  CURRENCY_CODE_CVE = 37;
  CURRENCY_CODE_CZK = 38;
  CURRENCY_CODE_DJF = 39;
  CURRENCY_CODE_DKK = 40;
  CURRENCY_CODE_DOP = 41;
  CURRENCY_CODE_DZD = 42;
  CURRENCY_CODE_EGP = 43;
  CURRENCY_CODE_ERN = 44;
  CURRENCY_CODE_ETB = 45;
  CURRENCY_CODE_EUR = 46;
  CURRENCY_CODE_FJD = 47;
  CURRENCY_CODE_FKP = 48;
  CURRENCY_CODE_GBP = 49;
  CURRENCY_CODE_GEL = 50;
  CURRENCY_CODE_GGP = 51;
  CURRENCY_CODE_GHS = 52;
  CURRENCY_CODE_GIP = 53;
  CURRENCY_CODE_GMD = 54;
  CURRENCY_CODE_GNF = 55;
  CURRENCY_CODE_GTQ = 56;
  CURRENCY_CODE_GYD = 57;
  CURRENCY_CODE_HKD = 58;
  CURRENCY_CODE_HNL = 59;
  CURRENCY_CODE_HRK = 60;
  CURRENCY_CODE_HTG = 61;
  CURRENCY_CODE_HUF = 62;
  CURRENCY_CODE_IDR = 63;
  CURRENCY_CODE_ILS = 64;
  CURRENCY_CODE_IMP = 65;
  CURRENCY_CODE_INR = 66;
  CURRENCY_CODE_IQD = 67;
  CURRENCY_CODE_IRR = 68;
  CURRENCY_CODE_ISK = 69;
  CURRENCY_CODE_JEP = 70;
  CURRENCY_CODE_JMD = 71;
  CURRENCY_CODE_JOD = 72;
  CURRENCY_CODE_JPY = 73;
  CURRENCY_CODE_KES = 74;
  CURRENCY_CODE_KGS = 75;
  CURRENCY_CODE_KHR = 76;
  CURRENCY_CODE_KMF = 77;
  CURRENCY_CODE_KPW = 78;
  CURRENCY_CODE_KRW = 79;
  CURRENCY_CODE_KWD = 80;
  CURRENCY_CODE_KYD = 81;
  CURRENCY_CODE_KZT = 82;
  CURRENCY_CODE_LAK = 83;
  CURRENCY_CODE_LBP = 84;
  CURRENCY_CODE_LKR = 85;
  CURRENCY_CODE_LRD = 86;
  CURRENCY_CODE_LSL = 87;
  CURRENCY_CODE_LTL = 88;
  CURRENCY_CODE_LVL = 89;
  CURRENCY_CODE_LYD = 90;
  CURRENCY_CODE_MAD = 91;
  CURRENCY_CODE_MDL = 92;
  CURRENCY_CODE_MGA = 93;
  CURRENCY_CODE_MKD = 94;
  CURRENCY_CODE_MMK = 95;
  CURRENCY_CODE_MNT = 96;
  CURRENCY_CODE_MOP = 97;
  CURRENCY_CODE_MRO = 98;
  CURRENCY_CODE_MUR = 99;
  CURRENCY_CODE_MVR = 100;
  CURRENCY_CODE_MWK = 101;
  CURRENCY_CODE_MXN = 102;
  CURRENCY_CODE_MYR = 103;
  CURRENCY_CODE_MZN = 104;
  CURRENCY_CODE_NAD = 105;
  CURRENCY_CODE_NGN = 106;
  CURRENCY_CODE_NIO = 107;
  CURRENCY_CODE_NOK = 108;
  CURRENCY_CODE_NPR = 109;
  CURRENCY_CODE_NZD = 110;
  CURRENCY_CODE_OMR = 111;
  CURRENCY_CODE_PAB = 112;
  CURRENCY_CODE_PEN = 113;
  CURRENCY_CODE_PGK = 114;
  CURRENCY_CODE_PHP = 115;
  CURRENCY_CODE_PKR = 116;
  CURRENCY_CODE_PLN = 117;
  CURRENCY_CODE_PYG = 118;
  CURRENCY_CODE_QAR = 119;
  CURRENCY_CODE_RON = 120;
  CURRENCY_CODE_RSD = 121;
  CURRENCY_CODE_RUB = 122;
  CURRENCY_CODE_RWF = 123;
  CURRENCY_CODE_SAR = 124;
  CURRENCY_CODE_SBD = 125;
  CURRENCY_CODE_SCR = 126;
  CURRENCY_CODE_SDG = 127;
  CURRENCY_CODE_SEK = 128;
  CURRENCY_CODE_SGD = 129;
  CURRENCY_CODE_SHP = 130;
  CURRENCY_CODE_SLL = 131;
  CURRENCY_CODE_SOS = 132;
  CURRENCY_CODE_SRD = 133;
  CURRENCY_CODE_STD = 134;
  CURRENCY_CODE_SVC = 135;
  CURRENCY_CODE_SYP = 136;
  CURRENCY_CODE_SZL = 137;
  CURRENCY_CODE_THB = 138;
  CURRENCY_CODE_TJS = 139;
  CURRENCY_CODE_TMT = 140;
  CURRENCY_CODE_TND = 141;
  CURRENCY_CODE_TOP = 142;
  CURRENCY_CODE_TRY = 143;
  CURRENCY_CODE_TTD = 144;
  CURRENCY_CODE_TWD = 145;
  CURRENCY_CODE_TZS = 146;
  CURRENCY_CODE_UAH = 147;
  CURRENCY_CODE_UGX = 148;
  CURRENCY_CODE_USD = 149;
  CURRENCY_CODE_UYU = 150;
  CURRENCY_CODE_UZS = 151;
  CURRENCY_CODE_VEF = 152;
  CURRENCY_CODE_VND = 153;
  CURRENCY_CODE_VUV = 154;
  CURRENCY_CODE_WST = 155;
  CURRENCY_CODE_XAF = 156;
  CURRENCY_CODE_XAG = 157;
  CURRENCY_CODE_XAU = 158;
  CURRENCY_CODE_XCD = 159;
  CURRENCY_CODE_XDR = 160;
  CURRENCY_CODE_XOF = 161;
  CURRENCY_CODE_XPF = 162;
  CURRENCY_CODE_YER = 163;
  CURRENCY_CODE_ZAR = 164;
  CURRENCY_CODE_ZMK = 165;
  CURRENCY_CODE_ZMW = 166;
  CURRENCY_CODE_ZWL = 167;
  CURRENCY_CODE_XPT = 168;
  CURRENCY_CODE_XPD = 169;
  CURRENCY_CODE_BTC = 170;
  CURRENCY_CODE_ETH = 171;
  CURRENCY_CODE_BNB = 172;
  CURRENCY_CODE_XRP = 173;
  CURRENCY_CODE_SOL = 174;
  CURRENCY_CODE_DOT = 175;
  CURRENCY_CODE_AVAX = 176;
  CURRENCY_CODE_MATIC = 177;
  CURRENCY_CODE_LTC = 178;
  CURRENCY_CODE_ADA = 179;
  CURRENCY_CODE_USDT = 180;
  CURRENCY_CODE_USDC = 181;
  CURRENCY_CODE_DAI = 182;
  CURRENCY_CODE_ARB = 183;
  CURRENCY_CODE_OP = 184;
  CURRENCY_CODE_VES = 185;
  CURRENCY_CODE_STN = 186;
  CURRENCY_CODE_MRU = 187;
  CURRENCY_CODE_ZWG = 188;
  CURRENCY_CODE_SLE = 189;
}